--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+  <div id="modal"></div>
   <div id="root"></div>
   <script src="./App.js"></script>
 </body>
